--- a/app/views/subscriptions/show.html.haml
+++ b/app/views/subscriptions/show.html.haml
@@ -1,4 +1,6 @@
-- @title = @presenter.subscription_name
+:ruby
+  @title = @presenter.subscription_name
+
 
 - content_for :mobile_subscription_nav do
   %span.reading_plans_btn
