fixed sign-in/up pages for mobile

--- a/app/views/shared/header/_basic.html.haml
+++ b/app/views/shared/header/_basic.html.haml
@@ -1,4 +1,4 @@
 #header_outer
   %header#header{:role => 'banner'}
-    %a#yv_logo{style: "#{@site.logo_style}; background-image: url(#{asset_path(@site.logo_image)})" }
+    %a{style: "#{@site.logo_style}; background-image: url(#{asset_path(@site.logo_image)})" }
       =@site.title
