--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -306,6 +306,7 @@
     border-radius: 4px
     border: none
     text-shadow: rgba(#000, 0.5) 0 -1px 0
+    width: 100%
 
   .version_select .scroll .loading
     display: none
@@ -681,7 +682,7 @@
 
     input[type="submit"].action_button_green,
     input[type="submit"].action_button_grey,
-    input[type="submit"].action_button_red
+    input[type="submit"].action_button_red,
       width: 100%
 
     .action_button_red.confirm
@@ -920,6 +921,11 @@
     opacity: 1
     box-shadow: none
     z-index: 100000
+
+  #flash_error
+    width: 100%
+    border-radius: 0px
+    margin-left: 0px
 
   // -------------Button stuff
   input[type="submit"]
