--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -927,6 +927,28 @@
     border-radius: 0px
     margin-left: 0px
 
+  // -------------Licensing page
+  article.licensing
+    h1
+      display: block
+      font-size: 22px
+      margin-bottom: 0px
+      margin-top: 10px
+
+    .support-info
+      margin-top: 30px
+      padding: 20px
+      background: #eaeaea
+      border-radius: 6px
+      border: 1px solid #ccc
+
+      h4
+        margin-bottom: 5px
+
+      ul
+        margin-top: 0px !important
+        margin-bottom: 0px
+
   // -------------Button stuff
   input[type="submit"]
     background-color: #81a950
