Update styles for new mobile-client class, consolidate mobile/plans.sass to plans.sass, consolidate application licenses css to licenses.sass, fix license notice for desktop.

--- a/app/assets/stylesheets/_footer.sass
+++ b/app/assets/stylesheets/_footer.sass
@@ -36,8 +36,8 @@
     float: right
     clear: right
 
-
-html.mobile
+// mobile class is added to html element for mobile pages
+html.mobile-client
 
   #footer
     height: 120px
