--- a/app/assets/stylesheets/_licenses.sass
+++ b/app/assets/stylesheets/_licenses.sass
@@ -4,3 +4,32 @@
   padding: 10px
   +round_bottom
   +round_top
+
+// mobile-client class is added to html element for mobile pages
+html.mobile-client
+  #license-notice
+    border: none
+    background: none
+    padding: 0
+    margin-top: 15px
+
+  article.licensing
+    h1
+      display: block
+      font-size: 22px
+      margin-bottom: 0px
+      margin-top: 10px
+
+    .support-info
+      margin-top: 30px
+      padding: 20px
+      background: #eaeaea
+      border-radius: 6px
+      border: 1px solid #ccc
+
+      h4
+        margin-bottom: 5px
+
+      ul
+        margin-top: 0px !important
+        margin-bottom: 0px
