--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -9,3 +9,29 @@
 
     .progress_wrap
       margin-bottom: 0
+
+// --------------------------------- Mobile styles
+html.mobile-client
+
+  #sidebar
+    #action-start.widget
+      padding: 15px
+      margin-bottom: 0
+
+  #sb-devotional
+    margin: 15px
+    ul
+      border: 1px solid #ccc
+      border-top: none
+
+  #sb-subscription
+
+    .content_target b
+      display: block
+      margin-bottom: .3em
+
+    .widget-notice
+      display: none
+
+    .subscription
+      margin-top: 0 !important
