--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -56,7 +56,7 @@
 #header .nav_btn,
 #header .settings_btn,
 #header .info_btn,
-#header .subscription_btn,
+#header .plan_btn,
 .settings_btn,
 .cancel_btn,
 .close_btn,
@@ -107,8 +107,8 @@
   margin-left: 12px
   margin-top: 8px
 
-#header .version_btn,
-#header .reading_plans_btn
+#header #m_version_btn,
+#header #m_plan_btn
   background: image-url("mobile/nav_button_bg.png") 0px 8px no-repeat
   padding: 18px 7px 18px 10px
   display: block
@@ -121,7 +121,7 @@
   margin: 0px
   line-height: 10px
 
-#header .reading_plans_btn
+#header #m_plan_btn
   padding: 10px 4px 13px 10px !important
   margin-left: 0px
   cursor: pointer
@@ -152,7 +152,7 @@
 #header .info_btn
   background: image-url("mobile/info_btn.png") 12px 8px no-repeat
 
-#header .subscription_btn
+#header .plan_btn
   background: image-url("icon_plan.png") right center no-repeat
   padding: 0px 8px 0px 14px
   width: auto
