--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -18,12 +18,11 @@
 - a_chapter = presenter.try(:is_chapter?)
 
 - content_for :mobile_right_nav do
-  %a.version_btn{:href => 'javascript:void(0);'}
-    = version.abbreviation
+  = link_to(version.abbreviation, 'javascript:void(0);', id: "m_version_btn" )
   %span.right_btn_slice
 
 - content_for :title_link do
-  = link_to(reference.human, 'javascript:void(0);')
+  = link_to(reference.human, 'javascript:void(0);', id:"m_book_chap_btn")
   %span.right_btn_slice
 
 
