--- a/app/views/subscriptions/show.html.haml
+++ b/app/views/subscriptions/show.html.haml
@@ -1,13 +1,6 @@
 :ruby
   @title = @presenter.subscription_name
 
-
-- content_for :mobile_subscription_nav do
-  %span.reading_plans_btn
-    %span.plan_day= t('plans.day number', day: @presenter.day)
-    %a.subscription_btn{:href => 'javascript:void(0);'}
-  %span.right_btn_slice
-
 - if @presenter.reference
   = render partial: "/references/reader", locals: {presenter: @presenter}
 
@@ -15,3 +8,10 @@
   %article
     %h1= t('plans.no verses')
     %p= t('plans.no content')
+
+- # has to be here so that title_link content in ^^ references/reader partial will get overwritten
+- overwrite_content_for(:title_link) do
+  %span#m_plan_btn
+    %span.plan_day= t('plans.day number', day: @presenter.day)
+    %a.plan_btn{:href => 'javascript:void(0);'}
+  %span.right_btn_slice
