--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -20,8 +20,10 @@
     %meta{name: "twitter:site",         content: "@YouVersion"}
     %meta{name: "twitter:app:name:iphone", content:"Bible"}
     %meta{name: "twitter:app:id:iphone", content:"282935706"}
+    %meta{name: "twitter:app:url:iphone", content:"youversion://#{@presenter.modal_verse.to_ios_path}"}
     %meta{name: "twitter:app:name:ipad", content:"Bible"}
     %meta{name: "twitter:app:id:ipad", content:"282935706"}
+    %meta{name: "twitter:app:url:ipad", content:"youversion://#{@presenter.modal_verse.to_ios_path}"}
     %meta{name: "apple-itunes-app",     content: "app-id=282935706, app-argument=youversion://#{@presenter.modal_verse.to_ios_path}"}
 
 = render partial: 'reader', locals: {presenter: @presenter}
