--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -24,6 +24,9 @@
     %meta{name: "twitter:app:name:ipad", content:"Bible"}
     %meta{name: "twitter:app:id:ipad", content:"282935706"}
     %meta{name: "twitter:app:url:ipad", content:"youversion://#{@presenter.modal_verse.to_ios_path}"}
+    %meta{name: "twitter:app:name:googleplay", content:"Bible"}
+    %meta{name: "twitter:app:id:googleplay", content:"com.sirma.mobile.bible.android"}
+    %meta{name: "twitter:app:url:googleplay", content:"youversion://#{@presenter.modal_verse.to_ios_path}"}
     %meta{name: "apple-itunes-app",     content: "app-id=282935706, app-argument=youversion://#{@presenter.modal_verse.to_ios_path}"}
 
 = render partial: 'reader', locals: {presenter: @presenter}
