--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,48 +1,28 @@
 !!! 5
 %html{class: (@html_classes.join(' ') if @html_classes), "data-locale" => I18n.locale, id: @html_id}
-  %head{:lang => 'en-us'}
+
+  %head{lang: 'en-us'}
     = csrf_meta_tags
-    - if @canonical
-      %link{rel: "canonical", href: @canonical}
     = render '/shared/head'
-    %link{rel: "shortcut icon", href:"/favicon.ico"}
-    %meta{name: "msApplication-ID", content: "af5f6405-7860-49a9-a6b4-a47381974e1d"}
-    %meta{name: "msApplication-PackageFamilyName", content: "LifeChurch.tv.Bible_d1phjsdba8cbj"}
     = render '/shared/javascripts'
     = render '/shared/google_analytics'
 
-    :javascript
-      var isMobile = {
-          BlackBerry: function() {
-              var ua = navigator.userAgent;
-              return (ua.indexOf("BlackBerry") >= 0) ? true : false;
-          } // you can add more tests here for other phones
-      };
-
-      var ua = navigator.userAgent;
-      if( isMobile.BlackBerry() ) {
-          var SplitUA = ua.split("/");
-          document.write("BB OS Version :: " + SplitUA[1].substring(0, 3));
-      }
-
   %body
-    #wrapper{:class => @fixed_width == true ? 'fixed_width' : ''}
+    #wrapper{class: @fixed_width == true ? 'fixed_width' : ''}
 
-      - if content_for?(:header)
-        = yield :header
-      - else
-        = render '/shared/header/default'
+      = content_for?(:header) ? yield(:header) : render("/shared/header/default")
 
       :ruby
         container_classes = []
         container_classes << "no_sidebar" if @sidebar == false
         container_classes << "no_primary_nav" if @main_nav == false
+        container_class_str = container_classes.join(" ")
 
       - flash.each do |key, msg|
-        %div{class: container_classes.join(" "), id: "flash_#{key}"}= msg
+        %div{class: container_class_str, id: "flash_#{key}"}= msg
 
-      #container{class: container_classes.join(" ")}
-        #main{:role => "main", :class => @is_reader == true ? 'main_reader' : ''}
+      #container{class: container_class_str}
+        #main{role: "main", class: @is_reader == true ? 'main_reader' : ''}
           = render partial: '/shared/nav_primary' unless @main_nav == false
           = content_for?(:main) ? yield(:main) : yield
           - if content_for? :main_trailer
@@ -53,5 +33,6 @@
           - else
             - unless (@sidebar == false || sidebar_presenter.blank?)
               = render partial: sidebar_presenter.sidebar_partial, locals: {presenter: sidebar_presenter}
+
       = render partial: '/shared/nav_mobile' unless @main_nav == false
       = render '/shared/footer'
