--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -64,7 +64,7 @@
 #reader_header
   %header
     %ul.float_left
-      %li
+      %li{class: version.rtl? ? "rtl" : nil}
         %a.dynamic_menu_trigger.drop_down_select{:href => '#menu_book_chapter', id:"menu_book_chapter_trigger", :title => t("ref.choose book and chapter")}
           %b
             = truncate(reference.to_s(version: false), length: 40, separator: " ")
