--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -479,3 +479,18 @@ a.more_arrow:hover
 
 #sidebar #action-start.widget
   margin-bottom: 10px
+
+// `Reader sidebar help widget
+//----------------------------------------------------------------------------------------------------
+
+.widget.reader_help
+  header
+    span
+      display: block
+      padding-left: 21px
+      background: image-url("icon_help.png") no-repeat left center
+
+  aside
+    +border-radius(0 0 4px 4px)
+    border-top: none
+    +box-shadow(inset rgba(0,0,0,.06) 0 3px 3px)
